--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required(VERSION 3.21)
-
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
@@ -8,7 +7,7 @@ set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 project(AmethystMenu VERSION 1.0.0)
 
 # Recursively search for all .cpp files in the src directory
-file(GLOB_RECURSE SOURCE_FILES "src/*")
+file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
 
@@ -20,8 +19,9 @@ endif()
 
 add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
 
+set(IMGUI_VERSION "v1.90.9")
 CPMAddPackage("gh:matcool/gd-imgui-cocos#09a9555")
+
 target_link_libraries(${PROJECT_NAME} imgui-cocos)
 
-# Set up the Geode mod
 setup_geode_mod(${PROJECT_NAME})
