--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -16,8 +16,31 @@ jobs:
       env:
         DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
       run: |
+        # Install jq if it's not already available
+        sudo apt-get install -y jq
+
+        # Extract release details
+        RELEASE_NAME="${{ github.event.release.name }}"
+        RELEASE_BODY="${{ github.event.release.body }}"
+        RELEASE_URL="${{ github.event.release.html_url }}"
+
+        # Get the URL of the attachment (first mod file)
+        ATTACHMENT_URL=$(echo "${{ github.event.release.assets }}" | jq -r '.[] | select(.name | contains("mod")) | .browser_download_url' | head -n 1)
+
+        # Escape special characters in the release body
+        ESCAPED_BODY=$(echo "$RELEASE_BODY" | sed 's/"/\\"/g' | sed 's/\n/\\n/g')
+
+        # Construct the message payload
+        MESSAGE=$(jq -n \
+          --arg name "$RELEASE_NAME" \
+          --arg body "$ESCAPED_BODY" \
+          --arg url "$RELEASE_URL" \
+          --arg attachment "$ATTACHMENT_URL" \
+          '{
+            content: "A new update has been released!\n\n**\($name)**\n\n\($body)\n\n[Download Attachment](\($attachment))\n\n[Release URL](\($url))"
+          }')
+
+        # Send the message to Discord
         curl -X POST $DISCORD_WEBHOOK_URL \
           -H "Content-Type: application/json" \
-          -d '{
-            "content": "A new release has been published! \n\nRelease Name: ${{ github.event.release.name }}\nRelease URL: ${{ github.event.release.html_url }}"
-          }'
+          -d "$MESSAGE"
