--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Find the .geode attachment URL
       id: find-attachment
       run: |
-        attachment_url=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.assets[] | select(.name == "omgrod.geodify.geode") | .browser_download_url')
+        attachment_url=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.assets[] | select(.name == "omgrod.amethyst_menu.geode") | .browser_download_url')
         echo "::set-output name=url::$attachment_url"
 
     - name: Update mods using geode CLI
