--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -1,11 +1,11 @@
-name: Mod Update Jobs
+name: Notify Discord
 
 on:
   release:
     types: [published]
 
 jobs:
-  handle_new_release:
+  notify_discord:
     runs-on: ubuntu-latest
 
     steps:
@@ -44,26 +44,3 @@ jobs:
         curl -X POST $DISCORD_WEBHOOK_URL \
           -H "Content-Type: application/json" \
           -d "$MESSAGE"
-
-    - name: Set up Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-        override: true
-
-    - name: Clone geode-sdk/cli repository
-      run: git clone https://github.com/geode-sdk/cli.git
-
-    - name: Change directory to cli
-      working-directory: cli
-      run: cargo install --path .
-
-    - name: Find the .geode attachment URL
-      id: find-attachment
-      run: |
-        attachment_url=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.assets[] | select(.name == "omgrod.amethyst_menu.geode") | .browser_download_url')
-        echo "::set-output name=url::$attachment_url"
-
-    - name: Update mods using geode CLI
-      run: geode index mods update ${{ steps.find-attachment.outputs.url }}
