--- a/.github/workflows/update-geode.yml
+++ b/.github/workflows/update-geode.yml
@@ -1,36 +1,36 @@
-name: Update Mod
+# name: Update Mod
 
-on:
-  release:
-    types: [published]
+# on:
+#   release:
+#     types: [published]
 
-jobs:
-  update_mods:
-    runs-on: ubuntu-latest
+# jobs:
+#   update_mods:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v3
 
-    - name: Set up Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        profile: minimal
-        override: true
+#     - name: Set up Rust
+#       uses: actions-rs/toolchain@v1
+#       with:
+#         toolchain: stable
+#         profile: minimal
+#         override: true
 
-    - name: Clone geode-sdk/cli repository
-      run: git clone https://github.com/geode-sdk/cli.git
+#     - name: Clone geode-sdk/cli repository
+#       run: git clone https://github.com/geode-sdk/cli.git
 
-    - name: Change directory to cli
-      working-directory: cli
-      run: cargo install --path .
+#     - name: Change directory to cli
+#       working-directory: cli
+#       run: cargo install --path .
 
-    - name: Find the .geode attachment URL
-      id: find-attachment
-      run: |
-        attachment_url=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.assets[] | select(.name == "omgrod.amethyst_menu.geode") | .browser_download_url')
-        echo "::set-output name=url::$attachment_url"
+#     - name: Find the .geode attachment URL
+#       id: find-attachment
+#       run: |
+#         attachment_url=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.assets[] | select(.name == "omgrod.amethyst_menu.geode") | .browser_download_url')
+#         echo "::set-output name=url::$attachment_url"
 
-    - name: Update mods using geode CLI
-      run: geode index mods update ${{ steps.find-attachment.outputs.url }}
+#     - name: Update mods using geode CLI
+#       run: geode index mods update ${{ steps.find-attachment.outputs.url }}
