--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -18,9 +18,9 @@ jobs:
         # - name: macOS
         #   os: macos-latest
 
-        - name: Android32
-          os: ubuntu-latest
-          target: Android32
+        # - name: Android32
+        #   os: ubuntu-latest
+        #   target: Android32
 
         - name: Android64
           os: ubuntu-latest
